src/snapshots/libflatterer__tests__basic.json-id_prefix-tables.csv.snap
---
source: src/lib.rs
assertion_line: 2014
expression: output
---
- "table_name,table_title"
- "main,main"
- "developer,developer"
- "platforms,platforms"

