src/snapshots/libflatterer__tests__basic.json-inline-data_package.json.snap
---
source: src/lib.rs
assertion_line: 1892
expression: "&value"

---
profile: tabular-data-package
resources:
  - profile: tabular-data-resource
    name: main
    schema:
      fields:
        - name: _link
          type: text
          count: 2
        - name: id
          type: number
          count: 2
        - name: title
          type: text
          count: 2
        - name: releaseDate
          type: date
          count: 2
        - name: developer_name
          type: text
          count: 2
        - name: rating_code
          type: text
          count: 2
        - name: rating_name
          type: text
          count: 2
      primaryKey: _link
    path: csv/main.csv
  - profile: tabular-data-resource
    name: platforms
    schema:
      fields:
        - name: _link
          type: text
          count: 3
        - name: _link_main
          type: text
          count: 3
        - name: name
          type: text
          count: 3
      primaryKey: _link
    path: csv/platforms.csv

