src/snapshots/libflatterer__tests__basic.json-json_path--fields.csv.snap
---
source: src/lib.rs
expression: output
---
- "table_name,field_name,field_type,field_title,count"
- "main,_link,text,_link,1"
- "main,id,number,id,1"
- "main,title,text,title,1"
- "main,releaseDate,date,releaseDate,1"
- "main,rating_code,text,rating_code,1"
- "main,rating_name,text,rating_name,1"
- "developer,_link,text,_link,1"
- "developer,_link_main,text,_link_main,1"
- "developer,name,text,name,1"
- "platforms,_link,text,_link,2"
- "platforms,_link_main,text,_link_main,2"
- "platforms,name,text,name,2"

